--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.0",
     "cross-fetch": "^3.1.6",
     "express": "^4.17.3",
+    "pagerank-js": "^0.3.0",
     "sqlite3": "^5.1.6"
   }
 }
